Bug 723105 - crash CrashInJS | nsMsgIdentity::SetFullName | nsOutlookCompose::CreateIdentity. r+a=Standard8 for checkin to CLOSED TREE